--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://knandersen.github.io/friendly-lego-ble",
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
+    "@material-ui/icons": "^4.2.1",
     "gh-pages": "^2.0.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
